--- a/Extender/Loader.csproj
+++ b/Extender/Loader.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Extender</RootNamespace>
-    <AssemblyName>ExtendWhitelist</AssemblyName>
+    <AssemblyName>LoadARMS</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -110,6 +110,11 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="../packages/UnmanagedExports.1.2.7/tools/RGiesecke.DllExport.targets" Condition="Exists('../packages/UnmanagedExports.1.2.7/tools/RGiesecke.DllExport.targets')" />
+  <PropertyGroup>
+    <PostBuildEvent>copy "LoadARMS.dll" "C:\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\LoadARMS.dll"
+
+copy "LoadARMS.dll" "C:\Games\Steam\SteamApps\common\SpaceEngineers\DedicatedServer64\LoadARMS.dll"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
