--- a/Injector/Injector.csproj
+++ b/Injector/Injector.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Injector</RootNamespace>
-    <AssemblyName>ExtendWhitelist</AssemblyName>
+    <AssemblyName>LoadARMS</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -76,9 +76,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArmsUpdater.cs" />
+    <Compile Include="GitHubClient.cs" />
     <Compile Include="Kernel32Wrapper.cs" />
     <Compile Include="DllInjector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Release.cs" />
+    <Compile Include="Version.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -88,18 +91,15 @@
     <ProjectReference Include="..\Extender\Loader.csproj">
       <Project>{5c2d3832-ddcb-4c1d-855c-5510625db149}</Project>
       <Name>Loader</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="../packages/UnmanagedExports.1.2.7/tools/RGiesecke.DllExport.targets" Condition="Exists('../packages/UnmanagedExports.1.2.7/tools/RGiesecke.DllExport.targets')" />
   <PropertyGroup>
-    <PostBuildEvent>copy "C:\Users\Alexander Durand\Desktop\Games\Space Engineers\MyMods\ExtendWhitelist\Injector\bin\x64\Release\ExtendWhitelist.exe" "C:\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\ExtendWhitelist.exe"
+    <PostBuildEvent>copy "LoadARMS.exe" "C:\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\LoadARMS.exe"
 
-copy "C:\Users\Alexander Durand\Desktop\Games\Space Engineers\MyMods\ExtendWhitelist\Injector\bin\x64\Release\ExtendWhitelist.dll" "C:\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\ExtendWhitelist.dll"
-
-copy "C:\Users\Alexander Durand\Desktop\Games\Space Engineers\MyMods\ExtendWhitelist\Injector\bin\x64\Release\ExtendWhitelist.exe" "C:\Games\Steam\SteamApps\common\SpaceEngineers\DedicatedServer64\ExtendWhitelist.exe"
-
-copy "C:\Users\Alexander Durand\Desktop\Games\Space Engineers\MyMods\ExtendWhitelist\Injector\bin\x64\Release\ExtendWhitelist.dll" "C:\Games\Steam\SteamApps\common\SpaceEngineers\DedicatedServer64\ExtendWhitelist.dll"</PostBuildEvent>
+copy "LoadARMS.exe" "C:\Games\Steam\SteamApps\common\SpaceEngineers\DedicatedServer64\LoadARMS.exe"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
