--- a/Injector/Injector.csproj
+++ b/Injector/Injector.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Kernel32Wrapper.cs" />
     <Compile Include="DllInjector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\VersionInfo.cs" />
     <Compile Include="Release.cs" />
     <Compile Include="Version.cs" />
   </ItemGroup>
