--- a/Injector/Load-ARMS.csproj
+++ b/Injector/Load-ARMS.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{081B3BE0-322B-4E4F-B93E-50AD18487B1D}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Injector</RootNamespace>
+    <RootNamespace>LoadArms</RootNamespace>
     <AssemblyName>LoadARMS</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -71,16 +71,21 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="VRage">
+      <HintPath>..\..\..\..\..\..\..\..\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\VRage.dll</HintPath>
+    </Reference>
     <Reference Include="VRage.Game">
       <HintPath>..\..\..\..\..\..\..\..\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\VRage.Game.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArmsUpdater.cs" />
+    <None Include="DllInjector.cs" />
     <Compile Include="GitHubClient.cs" />
-    <Compile Include="Kernel32Wrapper.cs" />
-    <Compile Include="DllInjector.cs" />
+    <None Include="Kernel32Wrapper.cs" />
+    <Compile Include="LoadArms.cs" />
+    <Compile Include="Logger.cs" />
+    <Compile Include="ModInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
     <Compile Include="Release.cs" />
@@ -88,13 +93,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Extender\Loader.csproj">
-      <Project>{5c2d3832-ddcb-4c1d-855c-5510625db149}</Project>
-      <Name>Loader</Name>
-      <Private>False</Private>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="../packages/UnmanagedExports.1.2.7/tools/RGiesecke.DllExport.targets" Condition="Exists('../packages/UnmanagedExports.1.2.7/tools/RGiesecke.DllExport.targets')" />
