--- a/Injector/Injector.csproj
+++ b/Injector/Injector.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{081B3BE0-322B-4E4F-B93E-50AD18487B1D}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LoadArms</RootNamespace>
+    <RootNamespace>Rynchodon.Injector</RootNamespace>
     <AssemblyName>LoadARMS</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -53,13 +53,12 @@
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="VRage">
       <HintPath>..\..\..\..\..\..\..\..\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\VRage.dll</HintPath>
-	  <Private>False</Private>
+      <Private>False</Private>
     </Reference>
     <Reference Include="VRage.Game">
       <HintPath>..\..\..\..\..\..\..\..\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\VRage.Game.dll</HintPath>
@@ -67,6 +66,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandLine.cs" />
     <Compile Include="DllInjector.cs" />
     <Compile Include="Kernel32Wrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -87,12 +87,16 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Loader\Loader.csproj">
+      <Project>{5c2d3832-ddcb-4c1d-855c-5510625db149}</Project>
+      <Name>Loader</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="../packages/UnmanagedExports.1.2.7/tools/RGiesecke.DllExport.targets" Condition="Exists('../packages/UnmanagedExports.1.2.7/tools/RGiesecke.DllExport.targets')" />
   <PropertyGroup>
-    <PostBuildEvent>copy "LoadARMS.exe" "C:\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\LoadARMS.exe"
-
-copy "LoadARMS.exe" "C:\Games\Steam\SteamApps\common\SpaceEngineers\DedicatedServer64\LoadARMS.exe"</PostBuildEvent>
+    <PostBuildEvent>start cmd.exe /C "C:\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\LoadArms.exe" -a=Rynchodon -r=Load-ARMS LoadARMS.exe LoadArms.dll</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
