--- a/Loader/Loader.csproj
+++ b/Loader/Loader.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -87,6 +88,7 @@
     <Compile Include="..\Injector\Properties\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
+    <Compile Include="DownloadProgress.cs" />
     <Compile Include="GitHubClient.cs" />
     <Compile Include="LoadArms.cs" />
     <Compile Include="Logger.cs" />
