--- a/Injector/Injector.csproj
+++ b/Injector/Injector.csproj
@@ -69,6 +69,7 @@
     <Compile Include="CommandLine.cs" />
     <Compile Include="DllInjector.cs" />
     <Compile Include="Kernel32Wrapper.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
   </ItemGroup>
