--- a/Injector/Injector.csproj
+++ b/Injector/Injector.csproj
@@ -46,30 +46,11 @@
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.IO.Compression" />
-    <Reference Include="System.IO.Compression.FileSystem" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <Reference Include="VRage">
-      <HintPath>..\..\..\..\..\..\..\..\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\VRage.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="VRage.Game">
-      <HintPath>..\..\..\..\..\..\..\..\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\VRage.Game.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="CommandLine.cs" />
     <Compile Include="DllInjector.cs" />
     <Compile Include="Kernel32Wrapper.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="PathExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\VersionInfo.cs" />
   </ItemGroup>
@@ -91,9 +72,12 @@
       <Name>Loader</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>start cmd.exe /C "C:\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\LoadArms.exe" -a=Rynchodon -r=Load-ARMS LoadARMS.exe LoadArms.dll</PostBuildEvent>
+    <PostBuildEvent>start cmd.exe /C "C:\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\LoadArms.exe" -a=Rynchodon -r=Load-ARMS LoadARMS.exe LoadArms.dll ..\..\..\..\LICENSE ..\..\..\..\Readme.txt</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
