--- a/Injector/Injector.csproj
+++ b/Injector/Injector.csproj
@@ -67,17 +67,22 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="System" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Loader\Loader.csproj">
       <Project>{5c2d3832-ddcb-4c1d-855c-5510625db149}</Project>
       <Name>Loader</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\global.config" />
   <PropertyGroup>
-    <PostBuildEvent>start cmd.exe /C ""C:\Games\Steam\SteamApps\common\SpaceEngineers\Bin64\LoadArms.exe" -a=Rynchodon -r=Load-ARMS LoadARMS.exe LoadArms.dll "..\..\..\..\Load-ARMS Readme.txt""</PostBuildEvent>
+    <PostBuildEvent>start cmd.exe /C ""$(ReferencePath)\LoadArms.exe" --author=Rynchodon --repo=Load-ARMS LoadARMS.exe LoadArms.dll "..\..\..\..\Load-ARMS Readme.txt""</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
