revert adding plugins to MyPlugins

--- a/Loader/Loader.csproj
+++ b/Loader/Loader.csproj
@@ -99,7 +99,8 @@
   </PropertyGroup>
   <Import Project="../packages/UnmanagedExports.1.2.7/tools/RGiesecke.DllExport.targets" Condition="Exists('../packages/UnmanagedExports.1.2.7/tools/RGiesecke.DllExport.targets')" />
   <PropertyGroup>
-    <PreBuildEvent>start cmd.exe /C "$(SolutionDir)\ResolveDependencies.exe"</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
