--- a/Loader/Loader.csproj
+++ b/Loader/Loader.csproj
@@ -77,6 +77,7 @@
     <Compile Include="..\Injector\Properties\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
+    <Compile Include="BuildTest.cs" />
     <Compile Include="DownloadProgress.cs" />
     <Compile Include="GitChecks.cs" />
     <Compile Include="GitHubClient.cs" />
