changed setup name

--- a/Injector/Injector.csproj
+++ b/Injector/Injector.csproj
@@ -80,6 +80,7 @@
   <Import Project="$(SolutionDir)\global.config" />
   <PropertyGroup>
     <PostBuildEvent>copy ..\..\..\..\Loader\bin\x64\Release\LoadARMS.dll LoadARMS.dll
+copy ..\..\..\..\SetupProject\bin\Release\SetupLoadArms.msi SetupLoadArms.msi
 
 start cmd.exe /C ""$(ReferencePath)\LoadArms.exe" --author=Rynchodon --repo=Load-ARMS --allBuilds LoadARMS.exe LoadArms.dll "..\..\..\..\Load-ARMS Readme.txt" "..\..\..\..\Load-ARMS License.txt""</PostBuildEvent>
   </PropertyGroup>
